// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BuildFinalTicket component should display all fields because everything is different 1`] = `
<div>
  <p>
    Select the fields you want to keep on the final ticket. The fields in blue will be kept. All fields not displayed here are either identical on both tickets, or will be computed automatically.
  </p>
  <div
    class="binary-choice form-group"
  >
    <div
      class="label"
    >
      Subject
    </div>
    <div
      class="options"
    >
      <div
        class="option active"
      >
        foo
      </div>
      <div
        class="option"
      >
        bar
      </div>
    </div>
  </div>
  <div
    class="binary-choice form-group"
  >
    <div
      class="label"
    >
      Customer
    </div>
    <div
      class="options"
    >
      <div
        class="option active"
      >
        <span>
          <i
            class="material-icons mr-2"
          >
            person
          </i>
          Maria Curie
        </span>
      </div>
      <div
        class="option"
      >
        <span>
          <i
            class="material-icons mr-2"
          >
            person
          </i>
          Pedro Curie
        </span>
      </div>
    </div>
  </div>
  <div
    class="binary-choice form-group"
  >
    <div
      class="label"
    >
      Assignee
    </div>
    <div
      class="options"
    >
      <div
        class="option active"
      >
        <span>
          <div
            class="component square d-inline-block mr-2"
            style="width: 26px; height: 26px;"
          >
            <div
              class="initials"
              style="width: 26px; height: 26px; font-size: 10.833333333333334px;"
            >
              <span
                style="line-height: 28px;"
              >
                JS
              </span>
            </div>
          </div>
          John Smith
        </span>
      </div>
      <div
        class="option"
      >
        <span>
          <div
            class="component square d-inline-block mr-2"
            style="width: 26px; height: 26px;"
          >
            <div
              class="initials"
              style="width: 26px; height: 26px; font-size: 10.833333333333334px;"
            >
              <span
                style="line-height: 28px;"
              >
                JR
              </span>
            </div>
          </div>
          Jack Ryan
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`BuildFinalTicket component should display the assignee field because the assignees on the tickets are different 1`] = `
<div>
  <p>
    Select the fields you want to keep on the final ticket. The fields in blue will be kept. All fields not displayed here are either identical on both tickets, or will be computed automatically.
  </p>
  <div
    class="binary-choice form-group"
  >
    <div
      class="label"
    >
      Assignee
    </div>
    <div
      class="options"
    >
      <div
        class="option active"
      >
        <span>
          <div
            class="component square d-inline-block mr-2"
            style="width: 26px; height: 26px;"
          >
            <div
              class="initials"
              style="width: 26px; height: 26px; font-size: 10.833333333333334px;"
            >
              <span
                style="line-height: 28px;"
              >
                JS
              </span>
            </div>
          </div>
          John Smith
        </span>
      </div>
      <div
        class="option"
      >
        <span>
          <div
            class="component square d-inline-block mr-2"
            style="width: 26px; height: 26px;"
          >
            <div
              class="initials"
              style="width: 26px; height: 26px; font-size: 10.833333333333334px;"
            >
              <span
                style="line-height: 28px;"
              >
                JR
              </span>
            </div>
          </div>
          Jack Ryan
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`BuildFinalTicket component should display the customer field because the customers on the tickets are different 1`] = `
<div>
  <p>
    Select the fields you want to keep on the final ticket. The fields in blue will be kept. All fields not displayed here are either identical on both tickets, or will be computed automatically.
  </p>
  <div
    class="binary-choice form-group"
  >
    <div
      class="label"
    >
      Customer
    </div>
    <div
      class="options"
    >
      <div
        class="option active"
      >
        <span>
          <i
            class="material-icons mr-2"
          >
            person
          </i>
          Maria Curie
        </span>
      </div>
      <div
        class="option"
      >
        <span>
          <i
            class="material-icons mr-2"
          >
            person
          </i>
          Pedro Curie
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`BuildFinalTicket component should display the subject field because the subjects on the tickets are different 1`] = `
<div>
  <p>
    Select the fields you want to keep on the final ticket. The fields in blue will be kept. All fields not displayed here are either identical on both tickets, or will be computed automatically.
  </p>
  <div
    class="binary-choice form-group"
  >
    <div
      class="label"
    >
      Subject
    </div>
    <div
      class="options"
    >
      <div
        class="option active"
      >
        foo
      </div>
      <div
        class="option"
      >
        bar
      </div>
    </div>
  </div>
</div>
`;

exports[`BuildFinalTicket component should not display any fields because they are all identical 1`] = `
<div>
  <p>
    Select the fields you want to keep on the final ticket. The fields in blue will be kept. All fields not displayed here are either identical on both tickets, or will be computed automatically.
  </p>
  <p
    class="mt-2 mb=2"
    style="text-align: center;"
  >
    These tickets are similar so all fields will be set automatically. Confirm the merge below and you’re all set!
  </p>
</div>
`;

exports[`BuildFinalTicket component should not display the assignee field because one of the assignees is empty 1`] = `
<div>
  <p>
    Select the fields you want to keep on the final ticket. The fields in blue will be kept. All fields not displayed here are either identical on both tickets, or will be computed automatically.
  </p>
  <p
    class="mt-2 mb=2"
    style="text-align: center;"
  >
    These tickets are similar so all fields will be set automatically. Confirm the merge below and you’re all set!
  </p>
</div>
`;
